objects/hed__Test_Score_Definition__mdt.object
<CustomObject>
    <description>Defines the scoring parameters of a Test, such as the passing score.</description>
    <label>Test Score Definition</label>
    <pluralLabel>Test Score Definitions</pluralLabel>
    <fields>
        <fullName>hed__Grading_Type__c</fullName>
        <description>The grading type of the Test Score. For example, an outcome or percentile.</description>
        <inlineHelpText>The grading type of the Test Score. For example, an outcome or percentile.</inlineHelpText>
        <label>Grading Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Letter</fullName>
                    <default>true</default>
                    <label>Letter</label>
                </value>
                <value>
                    <fullName>Numerical</fullName>
                </value>
                <value>
                    <fullName>Percentile</fullName>
                </value>
                <value>
                    <fullName>Performance Level</fullName>
                </value>
                <value>
                    <fullName>Result</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Subject_Area__c</fullName>
        <description>The subject area of the Test Score Definition. For example, Reading or Science.</description>
        <inlineHelpText>The subject area of the Test Score Definition. For example, Reading or Science.</inlineHelpText>
        <label>Subject Area</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Language</fullName>
                    <default>true</default>
                    <label>Language</label>
                </value>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Reading</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Overall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Maximum_Score__c</fullName>
        <description>The maximum numerical score for the Test.</description>
        <inlineHelpText>The maximum numerical score for the Test.</inlineHelpText>
        <label>Maximum Score</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Minimum_Score__c</fullName>
        <description>The minimum numerical score for the Test.</description>
        <inlineHelpText>The minimum numerical score for the Test.</inlineHelpText>
        <label>Minimum Score</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Passing_Value__c</fullName>
        <description>The minimum passing value for the Test.</description>
        <inlineHelpText>The minimum passing value for the Test.</inlineHelpText>
        <label>Passing Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Test_Definition__c</fullName>
        <description>A lookup to the related Test Definition.</description>
        <inlineHelpText>A lookup to the related Test Definition.</inlineHelpText>
        <label>Test Definition</label>
        <referenceTo>hed__Test_Definition__mdt</referenceTo>
        <relationshipLabel>Test Score Definitions</relationshipLabel>
        <relationshipName>Test_Score_Definitions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>hed__Possible_Results__c</fullName>
        <description>For tests that use non-numerical scores, the possible results expressed as a comma-delimited list. For example, &quot;Pass&quot;, &quot;Fail&quot; or &quot;A&quot;, &quot;B&quot;, &quot;C&quot;, &quot;D&quot;, &quot;F&quot;.</description>
        <inlineHelpText>For tests that use non-numerical scores, the possible results expressed as a comma-delimited list. For example, &quot;Pass&quot;, &quot;Fail&quot; or &quot;A&quot;, &quot;B&quot;, &quot;C&quot;, &quot;D&quot;, F&quot;.</inlineHelpText>
        <label>Possible Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Credentialing_Identifier__c</fullName>
        <description>An International Resource Identifier that uniquely identifies this credential.</description>
        <inlineHelpText>An International Resource Identifier that uniquely identifies this credential.</inlineHelpText>
        <label>Credentialing Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>hed__All_Test_Score_Definitions</fullName>
        <columns>MasterLabel</columns>
        <columns>hed__Test_Definition__c</columns>
        <columns>hed__Subject_Area__c</columns>
        <columns>hed__Grading_Type__c</columns>
        <columns>hed__Passing_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Test Score Definitions</label>
        <language>en_US</language>
    </listViews>
</CustomObject>